solve content alignment on mobile responsiveness

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,7 @@ main p{
 
 #features{
     background-color: #0b342d;
-    height: 25em;
+    height: 32em;
     text-align: center;
  
 }
@@ -252,7 +252,6 @@ main p{
 }
 
 .carousel{
-    width: 100%;
     position: relative;
     height: 100%;
 }
@@ -261,8 +260,6 @@ main p{
     overflow-x: hidden;
     width: 100%;
     height: 100%;
-    margin-inline: auto;
-
 }
 .carousel-track{
     margin:0;
